@@ -1231,3 +1231,5 @@ sstarted these clone on 12th of July, 2019
 [uuk]: tooltip contains now full qualified registry name
 [uuk]: added api management system
 [uuk]: released a1.1.0
+
+[uuk]: mdk has now an script for changing the target version
