@@ -53,6 +53,10 @@ information on development:
         its id.
 
 
+changelog of snapshot [next]
+    - MDK has now an function to change the target version
+
+
 changelog of a1.0.0: (excluding the changes from the snapshots below)
     Rendering:
         - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory
